# buildinfo

./: .gitignore  BuildInfo.hs  LICENSE  README.md  buildinfo.cabal  example.hs
System/: BuildInfo.hs
examples/: example.hs
