name:                buildinfo

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Include build information in a Haskell program at compile time.
description:
 buildinfo is a Template Haskell library that allows to include build
 information (build time, version control information) in a Haskell program at
 compile.

extra-source-files:
  README.md
  examples/*.hs

homepage:            https://github.com/wagdav/buildinfo
license:             BSD3
license-file:        LICENSE
author:              David Wagner
maintainer:          David Wagner <wagdav@gmail.com>
category:            Development
build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8

library
  -- Modules exported by the library.
  exposed-modules:     System.BuildInfo
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.5.*, template-haskell ==2.7.*, time ==1.4.*, process ==1.1.*

source-repository head
  type: git
  location: https://github.com/wagdav/buildinfo.git
